--- a/app/views/message_mailer/send_message.text.erb
+++ b/app/views/message_mailer/send_message.text.erb
@@ -1,11 +1,18 @@
 MessageMailer#send_message
 
-Yeah baby!!!!!
-
 
 Name:   <%= @message.name %> 
  
 Email: <%= @message.email %>  
+
+Startdate: <%= @message.startdate %>
+
+Enddate: <%= @message.enddate %>
+
+Adults: <%= @message.adult %>
+
+Children: <%= @message.children %>
   
-Message:  <%= @message.body %>   
+Message:  <%= @message.body %>  
+ 
 __________________________________          
