--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -32,9 +32,29 @@
   </div>
  </div> 
   
-
+  <div class="control-group">
+    <div class="controls">     
+     <%= f.text_field :startdate, :placeholder => "Startdate:" %>
+      </div>
+  </div>
   
+  <div class="control-group">
+    <div class="controls">      
+     <%= f.text_field :enddate, :placeholder => "enddate:" %>
+      </div>
+  </div>
+  
+  <div class="control-group">
+    <div class="controls">      
+     <%= f.text_field :adult, :placeholder => "adults:" %>
+      </div>
+  </div>
  
+  <div class="control-group">
+    <div class="controls">      
+     <%= f.text_field :children, :placeholder => "children:" %>
+      </div>
+  </div>
  
  <div class="control-group">
  	<div class="controls">    
