--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,39 +1,16 @@
 <header class="jumbotron subhead" id="overview">
   
-    
+  <div class="headline3">
+   
   
-  <div id="myCarousel" class="carousel slide">
-            <div class="carousel-inner">              
-              
-              <div class="item active">
-                <%= image_tag("srfsld2.jpg") %>               
-                <div class="carousel-caption2">
-                <p> <strong> <a href="categories/surfing">Surf trip</a> </strong>  </p>                  
-                </div>
-              </div>
-              <div class="item">
-                 <%= image_tag("ktsld4.jpg") %>                
-                 <div class="carousel-caption2">
-                <p> <strong> <a href="categories/kiteboarding">Kite trip</a>  </strong> </p>           
-                 </div>
-              </div>
-              <div class="item">
-                <%= image_tag("snbsldl3.jpg") %>                
-                <div class="carousel-caption2">
-               <p> <strong> <a href="categories/snowboard-ski">Snow trip</a> </strong> </p>               
-                </div>
-              </div>
-            </div>
-            <a class="left carousel-control2" href="#myCarousel" data-slide="prev"></a>
-            <a class="right carousel-control2" href="#myCarousel" data-slide="next"></a>          
-          </div>
+  
   
               <div class="headline">    
-                <h1> Epic Adventures  </h1>  
-                <p class="lead"> The Right Places to Go for Your Next </p>  
+                <h1> Epic Holidays </h1>
+                <h3> Find the right places to go for your next Adventure </h3>  
               </div>
   
-   
+   </div>
 
  
  </header> 
@@ -42,22 +19,22 @@
  
   <div class="border">    
    
+         <div class="search">
          <ul>                        
              <%= form_for @search do |f| %> 
-             
-                <li class="droper"> Featured places: </li>            
+                                 
                                                  
-                <li class="droper">  <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "All locations" %>    </li>                
-
-                <li class="droper">   <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => "All sports"  %>  </li>     
+                <li class="droper">   <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => " What do you want to do?"  %>  </li> 
                 
-                 <li class="droper">  <%= f.collection_select :budget_id_in, Budget.all, :id, :name, :include_blank => true, :prompt => "All budgets" %>    </li>                
+                <li class="droper">  <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "Where?" %>    </li>                
+                                   
+                 <li class="droper">  <%= f.collection_select :budget_id_in, Budget.all, :id, :name, :include_blank => true, :prompt => "Your Budget?" %>    </li>                
                                
                 <li class="droper">  <%= submit_tag "Find", :class => "btn btn-primary btn-large" %> </li>
       	
            <% end %>
          </ul>
-  
+         </div>
     
    
     
@@ -81,9 +58,10 @@
               <%= button_to "delete", trip, :method=>:delete, :class=>:destroy %>
              <% end %>
               <h3><%= link_to trip.title, trip %> </h3>
-              <p><%= trip.location %>  </p>
+              <p> <small> <%= trip.categories.map(&:name).to_sentence %> <%= trip.types.map(&:name).to_sentence %>  in <%= trip.location %> </small>  </p>
+             
              <div class="price">        
-             <p class="pull-right">  <h6>  <%= trip.price %> </h6> per person/week </p>
+             <h5>    <%= trip.price %>  </h5>
              
             </div>
           </div>
@@ -163,7 +141,7 @@ margin-top: 10px;
 <form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   <ul>
   	
-	<li> <label for="mce-EMAIL"> Thrill Engine features places that can literally change your life .... Sign up for the Newsletter!</label> </li>
+	<li> <label for="mce-EMAIL"> Sign up for the Newsletter! Hear about new places, promos & updates.</label> </li>
 	<li> <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required > </li>
 	<li> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> </li>
  
