--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,108 +3,31 @@
 
 
 <div class="hshot">
-<h1>  Epic
-Snow/Ski/Surf/Kite Holidays
-Specially for You </h1>
-</div>
 
 
-              <div class="headline2">    
-                <ul>
-                	<li> <h5> 1. Make your enquiry </h5>  </li>                	
-                	<li> <h5> 2. Get personalised offers in your inbox </h5> </li>
-                </ul> 
-                <a class="book_button" href="http://thrill.wufoo.com/forms/booking-inquiry/#public" > Enquire Now </a> 
-                <br></br>
-                <ul>
-                	<li> * Save Time  </li>
-                	<li> * No Booking or any other Fees. </li>
-                	<li> * Get the best offers Specially  for You </li>
-                </ul> 
+   <div class="hshoth">
+     <h1>   The Right Places to Go for Your Next Adventure </h1>
+
+   <h4> Get the free newsletter and receive all the hand-picked places and experiences, delivered right to your inbox  </h4>
+   <a href="http://eepurl.com/hhA2A" class="myButton">SUBSCRIBE NOW</a>
+   
+   <p> Your email address will never be shared or sold to anyone. We hate spam as much as you do.   </p>
+
+   </div>
+
+
+
+</div>   
               
-              </div>
+              
 
 
 </header> 
 
-<br></br>
-
-<div class="why">
-
-<h3> Thrill Engine is here to help you find that awesome adventure you are looking for, that fits your budget and expectations 	
-	</h3>
 
 
-</div>
-
-<br></br>
-
-<div class="social">
-<strong> Let's Connect:</strong> <div class="fb-like" data-href="http://www.facebook.com/ThrillEngine" data-send="true" data-layout="button_count" data-width="110" data-show-faces="false"></div>
-<a href="https://twitter.com/theThrillEngine" class="twitter-follow-button" data-show-count="true">Follow @theThrillEngine</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</div>
-
-<br></br>
-
-<!-- Begin MailChimp Signup Form -->
-<link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	
-	#mc_embed_signup input.email {
-display: block;
-padding: 6px 0;
-margin: 0 4% 15px 0;
-text-indent: 5px;
-width: 58%;
-min-width: 268px;
-margin-left: 250px;
-line-height: 14px;
-border-radius: 3px;
-margin-top: 10px;
-}
-		
-#mc_embed_signup label {
-display: block;
-font-size: 16px;
-padding-bottom: 5px;
-margin-top: 30px;
-line-height:110%;
-text-align:center;
-margin-left: 110px;
-
-}	
 
 
-#mc_embed_signup input.button {
-
-margin-top: 10px;
-margin-left: 10px;	
-	
-}
 
 
-<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
-
-
-	
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-  <ul>
-  	
-	<li> <label for="mce-EMAIL"> Not ready to book? Sign up for free and get updates about new listings, tips and offers!</label> </li>
-	<li> <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required > </li>
-	<li> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> </li>
- 
- </ul>
-    
-</form>
-</div>
-
-<!--End mc_embed_signup-->
-
-<p align="right"> Browse <a href="trips">  current listings → </a>  </strong> </p>
   
