--- a/app/views/pages/thank_you.html.erb
+++ b/app/views/pages/thank_you.html.erb
@@ -1,5 +1,5 @@
 
 
 
-<h2> Thank You! Your message has been sent.</h2>
+<h2> Thank You! Your message has been sent. Will get back to you with prices and availability. </h2>
 
