--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <div class="tripshow">
   
   <div class="abouth">
-    <h3> Thrill Engine helps you find the right places to go for epic adventures.  </h3>    
+    <h3> Thrill Engine serves as a guide for Epic Adventures, featuring places that can provide a life changing experience </h3>    
   </div>
 
 <br></br>
