--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -121,7 +121,7 @@
           </div>
      
       
-      <p> <strong> Description: </strong> <small> <%= @trip.description %> </small> </p>
+      <p> <strong> Description: </strong> <small> <%= raw @trip.description %> </small> </p>
       <p> <strong> Location: </strong> <small> <%= @trip.spot %> </small> </p>  
       <p> <strong> Rooms: </strong> <small> <%= @trip.rooms %> </small>  </p> 
       
