--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -157,10 +157,11 @@
   </div>
    
            
+
  
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.cktext_area :description, :id => "sometext" %>
   </div>
  
 
